# signal-rp2xxx-firmware

./: .gitignore  CMakeLists.txt  README.md
boards/pico2w_16ch/: CMakeLists.txt  config.h
boards/pico2w_24ch/: CMakeLists.txt  config.h
boards/pico2w_8ch/: CMakeLists.txt  config.h
boards/scorpio/: CMakeLists.txt  config.h
boards/signal8/: CMakeLists.txt  config.h
common/: bitplane.c  bitplane.h  dmx_output.c  dmx_output.h  dmx_output.pio  frame_protocol.c  frame_protocol.h  main.c  spi_slave.c  spi_slave.h  status_led.c  ws281x_parallel.c  ws281x_parallel.h  ws281x_parallel.pio
scripts/: firmware-flash.sh  spi_stress.py  spi_stress_report.py  spi_test.py
scripts/diag/: firmware-flash.sh  scorpio-flash.sh  spi_test.py
scripts/spi_stress/: go.mod  main.go
src/: config.h  frame_protocol.c  frame_protocol.h  main.c  spi_slave.c  spi_slave.h  status_led.c  status_led.h  ws281x_parallel.h
